# smart-rover-ai-tutor

./: .gitattributes  .gitignore  README.md  install.sh  pyproject.toml  smart-rover-installer.desktop  smart-rover-uninstaller.desktop  uninstall.sh
.claude/: settings.json  settings.local.json
.claude/commands/: create_plan.md  create_worktree.md  debug_codebase.md  describe_pr.md  implement_plan.md  iterate_plan.md  iterate_plan_nt.md  validate_plan.md
Steering/: codebase_path.md  content_policy.md  context.md  rules.md  tech.md
Steering/Solutions/: Project01_BlinkingLED_Solution.md  Project02_LightActivatedLED_Solution.md  Project03_SelectorOutput_Solution.md  Project04_ProgrammedDriving_Solution.md  Project05_TimedDriving_Solution.md  Project06_LightActivatedDriving_Solution.md  Project07_ControlledDriving_Solution.md  Project08_IntroductionToCamera_Solution.md  Project09_LightDetection_Solution.md  Project10_ColorDetection_Solution.md  Project11_ColorDetectionDriving_Solution.md  Project12_LightSeekingDriving_Solution.md  Project13_OpenEndedProject.md
thonnycontrib/: __init__.py  ansi_handler.py  loading_animation.py  main.py
thonnycontrib/config/: __init__.py  settings.py
thonnycontrib/console/: __init__.py  builtin_commands.py  command_executor.py  terminal_controller.py
thonnycontrib/gui/: __init__.py  dock_view.py  terminal_widget.py
thonnycontrib/models/: __init__.py  command.py
thonnycontrib/smart_rover/: __init__.py
thonnycontrib/smart_rover/config/: __init__.py  settings.py
thonnycontrib/smart_rover/console/: __init__.py  builtin_commands.py  command_executor.py  command_history.py  terminal_controller.py
thonnycontrib/smart_rover/gui/: __init__.py  dock_view.py  terminal_widget.py
thonnycontrib/smart_rover/models/: __init__.py
thonnycontrib/utils/: __init__.py  ansi_handler.py  loading_animation.py
(+22 files in other folders)
