[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-rover-ai-tutor"
version = "0.1.0"
description = "Kiro AI assistant integration for Thonny - provides an interactive terminal interface for coding help and tutoring"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{ name = "Your Name" }]
dependencies = [
  "thonny>=4,<6"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["thonnycontrib*"]