[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thonny-kiro-integration"
version = "0.1.0"
description = "Kiro AI assistant integration for Thonny - provides an interactive terminal interface for coding help and tutoring"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{ name = "Your Name" }]
keywords = ["thonny", "plugin", "kiro", "ai", "assistant", "education"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: Software Development",
]
dependencies = [
  "thonny>=4.0.0"
]

[project.entry-points."thonny.plugins"]
kiro_integration = "thonnycontrib.main:load_plugin"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["thonnycontrib*"]